--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,21 @@
     <head>
         <title>Github Battle</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+        <!-- pure grid -->
+        <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" 
+        crossorigin="anonymous">
+      <!--[if lte IE 8]>
+      <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-old-ie-min.css">
+      <![endif]-->
+      <!--[if gt IE 8]><!-->
+          <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-min.css">
+      <!--<![endif]-->
     </head>
 
     <body>
         <div id='root'>
 
-        </div>    
+        </div>
+        
     </body>
 </html>    
